cedar-lean/UnitTest/parser_tests/negative/is_with_string.cedar
permit(principal, action, resource) when { resource is "Folder" };
